2009-06-30  Jackson Harper  <jackson@ximian.com>

	* deepzoomimagetilesource.cpp: Parsers need to be freed.

2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* popup.cpp: According to the docs, a popup which is GC'ed
	  should be closed. Ensure that this happens.

2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* popup.cpp: If the child is set after the popup is opened,
	  make sure it is shown. Ensure that we now only emit the
	  Opened/Closed events when the popup IsOpen state changes.
	  Allows 503 to progress further.

2009-06-30  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Add a flag for template validation
	- Implement template validation and propogate errors up
	* cbinding.cpp: regen

2009-06-30  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: drop a debug block that was misinterpreted by
	the preprocessor. fir x drt 265.

2009-06-30  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: download the first num_dl (6) levels while the
	source is ready.

2009-06-29  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: Unregress drt 911, EnabledChanged events fire
	  at the correct time again.

2009-06-29  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (LoadGlyph): Save some memory by dropping some
	of the GlyphMetrics fields.

	* layout.cpp: Updated to keep track of the previous GlyphInfo
	rather than the previous GlyphInfo's index.

	* fonts.cpp (TextFont::GetGlyphInfo): Set the GlyphInfo face.
	(TextFont::Kerning): Modified to take GlyphInfo arguments rather
	than face indexes since they are worthless w/o knowing which font
	face the indexes of each are for.

2009-06-29  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: Propagate the IsEnabled changes down the visual
	  tree in OnPropertyChanged, not in SetValue.

2009-06-29  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Store enums as INTs.

2009-06-28  Chris Toshok  <toshok@ximian.com>
